--- a/src/index.css
+++ b/src/index.css
@@ -59,7 +59,7 @@ code {
 
 
 main {
-  margin-top: 300px;
+  margin-top: 150px;
 }
 .products {
   background-color: #f5f5f5;
@@ -176,5 +176,31 @@ input {
 
 .product-form button[type="submit"]:hover {
   background-color: #0056b3;
+}
+
+.admin-panel{
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  align-items: center;
+  
+}
+.admin-panel .manage-products{
+  flex-basis: 40%;
+  margin: 0 auto;
+  padding: 20px;
+  background-color: #f5f5f5;
+  border-radius: 8px;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+}
+
+.admin-panel .product-form{
+  flex-basis: 20%;
+  height: 100%;
+  margin: 0 auto;
+  padding: 20px;
+  background-color: #f5f5f5;
+  border-radius: 8px;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
 }
 
