--- a/src/index.css
+++ b/src/index.css
@@ -19,7 +19,7 @@ code {
   top: 0;
   width: 100%;
   height: 150px;
-
+z-index: 1;
 }
 
 .navbar a {
@@ -134,8 +134,6 @@ main {
   margin: 0 auto;
   padding: 20px;
   background-color: #f5f5f5;
-  border-radius: 8px;
-  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
 }
 
 .product-form h2 {
@@ -179,28 +177,29 @@ input {
 }
 
 .admin-panel{
+  background-color: #ccc;
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-between;
-  align-items: center;
   
 }
-.admin-panel .manage-products{
-  flex-basis: 40%;
-  margin: 0 auto;
+.admin-panel .products{
+  height: calc(100vh - 200px);
+  overflow-y: scroll;
+  flex: 1 1 50%;
   padding: 20px;
   background-color: #f5f5f5;
-  border-radius: 8px;
-  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+}
+.admin-panel .product{
+  padding: 20px;
+  background-color: #f5f5f5;
+  border: 1px solid #ccc;
 }
 
 .admin-panel .product-form{
-  flex-basis: 20%;
-  height: 100%;
-  margin: 0 auto;
+  flex: 1 1 50%;
   padding: 20px;
   background-color: #f5f5f5;
-  border-radius: 8px;
-  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  border-left: 3px solid rgb(17, 207, 33);
+  border-right: 3px solid rgb(17, 207, 33);
 }
 
